--- a/relay-clone/styles.css
+++ b/relay-clone/styles.css
@@ -1,4 +1,3 @@
-
 .nav-bar-logo{
     display: inline-block;
     vertical-align: top;
@@ -46,12 +45,14 @@
 
 
 .connect-wallet{
-    font-size: 15px;
-    margin-left: 500px;
-    color: #FF37C7;
-    border-radius: 7px;
+    display: inline-block;
+    margin-left: 40%;
+    margin-right: 0px;
     height: 30px;
-    background-color: #FF37CF1F;
+    color: #FF37C7;
+    margin-top: 10px;
+    border-radius: 7px;
+    background-color: #d8bfd21f;
 }
 
 .connect-wallet:hover, .swap:hover, .txns:hover, .more:hover{
@@ -59,14 +60,19 @@
     color: black;
 }
 
-.from-tab, .to-tab{
+.swap-tab{
+    margin-top: 5%;
+    margin-left: 30%;
     width: 400px;
     height: 150px;
+}
+
+.from-tab, .to-tab{
+    width: 100%;
+    height: 100%;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    margin-left: 30%;
-    margin-top: 5%;
 }
 
 .details{
@@ -129,7 +135,7 @@
     border-radius: 20px;
 }
 
-.change-token:hover, .wallet{
+.change-token:hover, .wallet:hover, .switch-button{
     cursor: pointer;
 }
 
@@ -165,5 +171,40 @@
 }
 
 .to-tab{
-    margin-top: 1%;
+    margin-top: 2px;
+}
+
+.switch{
+    display: block;
+    margin-left: 45%;
+    margin-top: -15px;
+    margin-bottom: -15px;
+    width: 45px;
+}
+
+
+.switch-button{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    font-family: Roboto, system-ui;
+    font-size: 30px;
+    font-weight: 300;
+    box-shadow:  0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.swap-button{
+    display: block;
+    background-color: #FF37C7;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-family: Roboto, system-ui;
+    font-size: 20px;
+    font-weight: 600;
+    width: 100%;
+    margin-top: 5px;
+    height: 40px;
 }
