--- a/jumper-clone/jumper.css
+++ b/jumper-clone/jumper.css
@@ -29,7 +29,8 @@
     transition: all 0.3s ease-in-out;
 }
 
-.connect-wallet:hover, .settings:hover, .menu.settings:hover{
+.connect-wallet:hover, .settings:hover, .menu.settings:hover,
+ .bridge:hover, .from-token-tab:hover, .to-token-tab:hover{
     cursor: pointer;
 }
 
@@ -62,8 +63,8 @@
     display: inline-block;
     border: none;
     background-color: transparent;
-    margin-left: 20px;
-    padding-top: 3px;
+    margin-left: 3%;
+   
     vertical-align: top;
 }
 
@@ -79,6 +80,8 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
     padding-left: 10px;
     padding-top: 7px;
+    border: none;
+    background-color: transparent;
 }
 
 .swap-tab{
@@ -103,6 +106,11 @@
 .from-text, .to-text{
     font-family: Roboto, system-ui;
     font-weight: 500;
+    text-align: left;
+}
+
+.token{
+    padding-right: 50px;
 }
 
 .token-details{
@@ -112,16 +120,17 @@
 
 .token-name{
     font-family: Roboto, system-ui;
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 0px;
     margin-top: 0px;
+    text-align: left;
 }
 
 .chain{
     font-family: Roboto, system-ui;
     color: rgb(116, 116, 116);
     margin-top: 0px;
-    font-size: 15px;
+    text-align: left;
 }
 
 .send-tab{
