--- a/element-clone/styles.css
+++ b/element-clone/styles.css
@@ -125,7 +125,6 @@
     align-items: center;
     margin-top: 20px;
     height: 300px;
-    width: 92%;
     background-color: #E7E7E7;
 
 }
@@ -163,3 +162,191 @@ body{
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.home-header{
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.data-filters{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+}
+
+.trending-filters{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.trending-filter-item{
+    display: flex;
+    border: none;
+    background-color: transparent;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    align-items: center;
+    border-radius: 7px;
+    height: 30px;
+    color: rgb(142, 142, 147);
+}
+
+.time-filters{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.time{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color:rgb(230, 234, 238);
+    border-radius: 5px;
+    width: 150px;
+}
+
+.time-filter-item{
+    background-color: transparent;
+    font-family: Roboto, sans-serif;
+    font-size: 10px;
+    font-weight: 600;
+    color: rgb(142, 142, 147);
+    border-style: solid;
+    border-right-color:rgb(230, 234, 238);
+    border-right-width: 0.8px;
+    border-top: none;
+    border-bottom:none;
+    border-left: none;
+    height: 30px;
+}
+
+.time-filter-item:hover, .trending-filter-item:hover{
+    cursor: pointer;
+    background-color: rgb(244, 247, 249);
+}
+
+.view-all-rankings{
+    border: solid;
+    border-width: 0.8px;
+    border-color: rgb(230, 234, 238);
+    border-radius: 5px;
+    background-color: transparent;
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    color: rgb(142, 142, 147);
+    height: 30px;
+    margin-left: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.collection-grid{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.grid-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.header-collection{
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    color: rgb(142, 142, 147);
+    flex: 1;
+    margin-bottom: 0px;
+}
+
+.header-floor-price{
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    color: rgb(142, 142, 147);;
+    width: 100px;
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+.header-volume{
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    color: rgb(142, 142, 147);;
+    width: 100px;
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+.collection-item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.rank{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    flex: 0.09;
+    color:rgb(54, 60, 66);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.collection-image{
+    width: 60px;
+    border-radius: 10px;
+}
+
+.collection-name{
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    flex: 1;
+    margin-left: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.collection-token-container{
+    width: 12px;
+}
+
+.collection-token{
+    width: 100%;
+}
+
+.floor-price, .volume{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    width: 100px;
+    justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
