--- a/element-clone/styles.css
+++ b/element-clone/styles.css
@@ -161,6 +161,7 @@
 body{
     padding-left: 10px;
     padding-right: 10px;
+    margin-bottom: 500px;
 }
 
 .home-header{
@@ -287,7 +288,7 @@ body{
     font-family: Roboto, sans-serif;
     font-weight: 600;
     font-size: 12px;
-    color: rgb(142, 142, 147);;
+    color: rgb(142, 142, 147);
     width: 100px;
     text-align: center;
     margin-bottom: 0px;
@@ -296,7 +297,7 @@ body{
 .collection-item{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     margin-top: 10px;
 }
 
@@ -327,6 +328,8 @@ body{
     margin-left: 20px;
     margin-top: 0px;
     margin-bottom: 0px;
+    color: rgb(43, 47, 51);
+    text-align: left;
 }
 
 .collection-token-container{
@@ -340,7 +343,7 @@ body{
 .floor-price, .volume{
     display: flex;
     flex-direction: row;
-    align-items: end;
+    align-items: center;
     font-family: Roboto, sans-serif;
     font-weight: 600;
     font-size: 13px;
@@ -349,4 +352,96 @@ body{
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+.verified{
+    width: 10px;
+}
+
+.collection-item:hover{
+    background-color:  rgb(240, 240, 240);
+}
+
+button{
+    border: none;
+    background-color: transparent;
+}
+
+button:hover{
+    cursor: pointer;
+
+}
+
+.market-signal{
+    display: flex;
+    justify-content: space-between;
+    font-family: Roboto, sans-serif;
+    font-size: 28px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+
+.market-stat{
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    color: rgb(131, 139, 146);
+    font-weight: 400;
+    padding-top: 15px;
+}
+
+.nft-card{
+    display: flex;
+    flex-direction: column;
+    border-radius: 7px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 170px;
+    align-items: center;
+    padding-top: 5px;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+.performance{
+    font-family: Roboto, sans-serif;
+    width: 120px;
+    background-color: rgb(240, 240, 240);
+    color: rgb(2, 188, 98);
+    border-radius: 3px;
+    font-size: 11px;
+    text-align: center;
+}
+
+.project-name{
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+}
+
+.floor-data{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 100px;
+    justify-content: space-between;
+}
+
+.floor-text, .volume-text{
+    font-family: Roboto, sans-serif;
+    font-size: 11px;
+    color: rgb(131, 139, 146);
+    margin-top: 5px;
+}
+
+.project-floor, .project-vol{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: Roboto, sans-serif;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.token-icon{
+    width: 20px;
+}
+
+
 
