--- a/element-clone/styles.css
+++ b/element-clone/styles.css
@@ -271,7 +271,7 @@ body{
     font-size: 12px;
     color: rgb(142, 142, 147);
     flex: 1;
-    margin-bottom: 0px;
+    margin-bottom: 15px;
 }
 
 .header-floor-price{
@@ -298,7 +298,6 @@ body{
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    margin-top: 10px;
 }
 
 .rank{
@@ -317,6 +316,7 @@ body{
 
 .collection-image{
     width: 60px;
+    height: 60px;
     border-radius: 10px;
 }
 
@@ -388,31 +388,67 @@ button:hover{
     padding-top: 15px;
 }
 
+.nft-card-scroller{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 20px;
+    padding-left: 20px;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding-bottom: 10px;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.nft-card-scroller:hover{
+    scrollbar-width: thin;
+}
+
 .nft-card{
     display: flex;
     flex-direction: column;
     border-radius: 7px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     width: 170px;
+    padding-bottom: 7px;
+    margin-right: 20px;
     align-items: center;
-    padding-top: 5px;
+    padding-top: 10px;
     margin-top: 20px;
-    margin-left: 30px;
+    flex-shrink: 0;
+    border: none;
+    transition: margin 0.1s;
+}
+
+.nft-card:hover{
+    margin-top: 10px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
 }
 
 .performance{
     font-family: Roboto, sans-serif;
-    width: 120px;
     background-color: rgb(240, 240, 240);
     color: rgb(2, 188, 98);
+    font-weight: 500;
     border-radius: 3px;
     font-size: 11px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     text-align: center;
+    margin-top: 0px;
+    margin-bottom: 7px;
 }
 
 .project-name{
     font-family: Roboto, sans-serif;
     font-size: 14px;
+    font-weight: 600;
+    margin-top: 7px;
 }
 
 .floor-data{
@@ -428,6 +464,8 @@ button:hover{
     font-size: 11px;
     color: rgb(131, 139, 146);
     margin-top: 5px;
+    margin-top: 0px;
+    margin-bottom: 5px;
 }
 
 .project-floor, .project-vol{
@@ -442,6 +480,54 @@ button:hover{
 .token-icon{
     width: 20px;
 }
+
+.trending-now-header{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-family: Roboto, sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.trending-item-scroller{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.trending-item{
+    display: flex;
+    flex-direction: column;
+    border-radius: 7px;
+    align-items: center;
+    width: 260px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.trending-item-img{
+    width: 100%;
+    transition: transform 0.3s ease;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.trending-item-name{
+    font-family: Robotol, sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.trending-item-img:hover{
+    transform: scale(1.1);
+}
+
+.t-floor-data{
+}
+.trending-item:hover{
+    cursor: pointer;
+}
+
 
 
 
