--- a/element-clone/styles.css
+++ b/element-clone/styles.css
@@ -418,7 +418,7 @@ button:hover{
     margin-top: 20px;
     flex-shrink: 0;
     border: none;
-    transition: margin 0.1s;
+    transition: margin 0.2s ease;
 }
 
 .nft-card:hover{
@@ -482,8 +482,8 @@ button:hover{
 }
 
 .trending-now-header{
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 35px;
+    margin-bottom: 30px;
     font-family: Roboto, sans-serif;
     font-weight: 600;
     font-size: 25px;
@@ -493,6 +493,10 @@ button:hover{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow-x: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    padding-bottom: 10px;
 }
 
 .trending-item{
@@ -500,9 +504,11 @@ button:hover{
     flex-direction: column;
     border-radius: 7px;
     align-items: center;
-    width: 260px;
+    width: 220px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    margin-right: 15px;
+    flex-shrink: 0;
 }
 
 .trending-item-img{
@@ -516,18 +522,74 @@ button:hover{
     font-family: Robotol, sans-serif;
     font-weight: 600;
     font-size: 12px;
+    align-self: start;
+    margin-left: 15px;
 }
 
 .trending-item-img:hover{
     transform: scale(1.1);
 }
 
-.t-floor-data{
-}
 .trending-item:hover{
     cursor: pointer;
 }
 
+.trending-item-scroller:hover{
+    scrollbar-width: thin;
+    scrollbar-color:  rgb(131, 139, 146);
+}
 
+.support-section{
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+    padding-left: 12%;
+}
+
+.collection-support{
+    display: flex;
+    flex-direction: row;
+    width: 425px;
+    align-items: start;
+    margin-right: 15px;
+    padding-bottom: 30px;
+    padding-left: 20px;
+    border-radius: 10px;
+    background-color: rgb(244, 247, 249);
+}
+
+.support-image{
+    width: 170px;
+    flex: 0.5
+}
+
+.support-type{
+    margin-top: 30px;
+}
+.text-section{
+    font-family: Roboto, system-ui;
+    font-size: 25px;
+    font-weight: 600;
+    flex: 1;
+}
+.apply-support{
+   background-color: rgb(54, 60, 66);
+   border-radius: 3px;
+   padding-top: 8px;
+   padding-bottom: 8px;
+   color: white;
+   padding-right: 15px;
+   padding-left: 15px;
+   margin-top: 0px;
+   margin-bottom: -10px;
+}
+
+.support-description{
+    font-family: Roboto, system-ui;
+    font-size: 13px;
+    font-weight: 400;
+    color:rgb(43, 47, 51);
+    line-height: 30px;
+}
 
 
