--- a/element-clone/styles.css
+++ b/element-clone/styles.css
@@ -158,11 +158,11 @@
     border-radius: 10px;
 }
 
-body{
+/* body{
     padding-left: 10px;
     padding-right: 10px;
-    margin-bottom: 500px;
-}
+
+} */
 
 .home-header{
     font-family: Roboto, sans-serif;
@@ -590,6 +590,37 @@ button:hover{
     font-weight: 400;
     color:rgb(43, 47, 51);
     line-height: 30px;
+}
+
+.footer-section{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(43, 47, 51);
+    margin-top: 50px;
+    padding-bottom: 100px;
+    padding-top: 30px;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: 0px;
+}
+
+.partners{
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 30px;
+    border-bottom: 0.9px solid rgb(54, 60, 66);
+}
+
+.partners-tab{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.partner-logo{
+    height: 100%;
 }
 
 
