--- a/Sworp-landing-page/styles.css
+++ b/Sworp-landing-page/styles.css
@@ -147,6 +147,7 @@ p{
     flex-wrap: wrap;
     max-width: 90%;
     height: 60%;
+    align-items: center;
     overflow-x: auto;
     white-space: nowrap;
     -ms-overflow-style: none;
@@ -163,13 +164,37 @@ p{
     display:flex;
     flex-direction: column;
     justify-content: center;
-    width: 100px;
+    width: 130px;
     margin-right: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+.select{
+    flex: 0.9;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+}
+
+.selector{
+    position: absolute;
+    background-color: transparent;
+    width: 20px;
+    z-index: 2;
+    top: 0%;
+    left: 80%;
+}
+
+.nft-name{
+    font-size: 18px;
+    font-weight: 450;
+    color: rgb(36, 35, 35);
+    text-align: center;
+    z-index: 1;
+}
+/* 
 .add{
     border: none;
     background-color: transparent;
@@ -186,6 +211,12 @@ p{
 
 .add-image:hover{
     width: 25px;
+} */
+
+
+.select:hover{
+    cursor: pointer;
+
 }
 
 .nft-image{
